 ══════════
   Main App (v3.2.0.6)
   October 24th, 2019
 ══════════
  • FIXED: Minor bug fixes.

 ══════════
   Action App (v3.2.0.5)
   October 25th, 2019
 ══════════
  • ADDED: the abilitity to run routines/set location modes when an action is triggered.
  • ADDED: When action is tiered it you can define tier start tasks (routines, mode, switches, webcore pistons), the another set of those tasks when the task has stopped.
  • FIXED: repeat after events were broken.
  • FIXED: other minor bug fixes.

-------------------------------------------------

 ══════════
   Main App (v3.2.0.5)
   October 22nd, 2019
 ══════════
  • FIXED: Child initiated refresh was broken.
  • FIXED: Child app updates are now triggered properly.

 ══════════
   Action App (v3.2.0.4)
   October 22nd, 2019
 ══════════
  • ADDED: new mode condition option to select whether mode is in or not in the selected modes.  App will update existing config to use is in modes.
  • FIXED: time/date speech variables were not working.
  • FIXED: Zone status updates are now requested on action updated() event.

 ══════════
   Zone App (v3.2.0.5)
   October 22nd, 2019
 ══════════
  • ADDED: new mode condition option to select whether mode is in or not in the selected modes.  App will update existing config to use is in modes.
  • FIXED: Zone status updates event now sends an update like it's supposed to.

 ══════════
   Echo Device (v3.2.0.3)
   October 22nd, 2019
 ══════════
  • FIXED: Bugs with Websocket events resolved.
  • FIXED: Issues with certain commands not working like createReminder and others is now fixed.

-------------------------------------------------

 ══════════
   Main App (v3.2.0.3)
   October 21st, 2019
 ══════════
  • ADDED: New amazon domain (amazon.com.mx) and es-UY and es-SP locales.
  • FIXED: The announcement test should now work.  They were so broken before it was embarassing.
  • FIXED: App now cleans up app settings correctly after initialize() is run.