@@ -2,7 +2,7 @@
     "appDataVer": "3.1",
     "versions": {
         "mainApp": {
-            "ver": "3.2.0.5"
+            "ver": "3.2.0.6"
         },
         "actionApp": {
             "ver": "3.2.0.5"
